POWR-1093 cex post updb

--- a/web/sites/default/config/core.entity_form_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.audio.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.media.audio.field_title
     - field.field.media.audio.field_transcript
     - media.type.audio
+    - workflows.workflow.media
   module:
     - allowed_formats
     - chosen_field
