--- a/web/sites/default/config/core.entity_form_display.media.audio.media_library.yml
+++ b/web/sites/default/config/core.entity_form_display.media.audio.media_library.yml
@@ -1,9 +1,9 @@
-uuid: 4a61139e-b45c-4761-a677-306e68d3623d
+uuid: 82757437-65e5-464f-a23e-c8ac7974a835
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.thumbnail
+    - core.entity_form_mode.media.media_library
     - field.field.media.audio.field_caption
     - field.field.media.audio.field_creator
     - field.field.media.audio.field_group
@@ -13,37 +13,20 @@ dependencies:
     - field.field.media.audio.field_source
     - field.field.media.audio.field_title
     - field.field.media.audio.field_transcript
-    - image.style.medium
     - media.type.audio
-  module:
-    - ds
-    - image
-id: media.audio.thumbnail
+id: media.audio.media_library
 targetEntityType: media
 bundle: audio
-mode: thumbnail
+mode: media_library
 content:
-  content_moderation_control:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  thumbnail:
-    type: image
-    weight: 1
-    label: hidden
+  name:
+    type: string_textfield
     settings:
-      image_style: medium
-      image_link: ''
+      size: 60
+      placeholder: ''
+    weight: 0
+    third_party_settings: {  }
     region: content
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
 hidden:
   created: true
   field_caption: true
@@ -55,5 +38,8 @@ hidden:
   field_source: true
   field_title: true
   field_transcript: true
-  name: true
+  moderation_state: true
+  path: true
+  preview: true
+  status: true
   uid: true
