--- a/web/sites/default/config/core.entity_form_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - media.type.document
+    - workflows.workflow.media
   module:
     - chosen_field
     - content_moderation
