--- a/web/sites/default/config/core.entity_form_display.media.document.media_browser.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.media_browser.yml
@@ -5,8 +5,14 @@ dependencies:
   config:
     - core.entity_form_mode.media.media_browser
     - field.field.media.document.field_document
+    - field.field.media.document.field_document_type
+    - field.field.media.document.field_file_size
+    - field.field.media.document.field_group
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_mime_type
+    - field.field.media.document.field_summary
     - media.type.document
+    - workflows.workflow.media
   module:
     - content_moderation
     - path
@@ -54,4 +60,9 @@ content:
 hidden:
   created: true
   field_document: true
+  field_document_type: true
+  field_file_size: true
+  field_group: true
+  field_mime_type: true
+  field_summary: true
   uid: true
