--- a/web/sites/default/config/core.entity_form_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.default.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.media.image.image
     - image.style.max_540w
     - media.type.image
+    - workflows.workflow.media
   module:
     - allowed_formats
     - chosen_field
