--- a/web/sites/default/config/core.entity_form_display.media.image.media_browser.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.media_browser.yml
@@ -4,11 +4,21 @@ status: true
 dependencies:
   config:
     - core.entity_form_mode.media.media_browser
+    - field.field.media.image.field_caption
+    - field.field.media.image.field_creator
+    - field.field.media.image.field_file_size
     - field.field.media.image.field_group
+    - field.field.media.image.field_image_height
+    - field.field.media.image.field_image_width
+    - field.field.media.image.field_license
     - field.field.media.image.field_media_in_library
+    - field.field.media.image.field_mime_type
+    - field.field.media.image.field_source
+    - field.field.media.image.field_title
     - field.field.media.image.image
     - image.style.thumbnail_200x200
     - media.type.image
+    - workflows.workflow.media
   module:
     - content_moderation
     - focal_point
@@ -70,5 +80,14 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_caption: true
+  field_creator: true
+  field_file_size: true
   field_group: true
+  field_image_height: true
+  field_image_width: true
+  field_license: true
+  field_mime_type: true
+  field_source: true
+  field_title: true
   uid: true
