--- a/web/sites/default/config/core.entity_form_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.media.video.field_title
     - field.field.media.video.field_transcript
     - media.type.video
+    - workflows.workflow.media
   module:
     - allowed_formats
     - chosen_field
