--- a/web/sites/default/config/core.entity_view_display.node.building.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.building.field_address
+    - field.field.node.building.field_legacy_path
     - node.type.building
   module:
     - address
