--- a/web/sites/default/config/core.entity_view_display.node.code_section.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.code_section.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.code_section.field_code_chapter
+    - field.field.node.code_section.field_documents
     - field.field.node.code_section.field_legacy_path
     - field.field.node.code_section.field_numeric_order
     - field.field.node.code_section.field_prefix_note
