--- a/web/sites/default/config/core.entity_view_display.node.council_meeting.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_meeting.teaser.yml
@@ -4,6 +4,10 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.council_meeting.field_agenda
+    - field.field.node.council_meeting.field_council_meeting_status
+    - field.field.node.council_meeting.field_council_meeting_type
+    - field.field.node.council_meeting.field_notes
     - field.field.node.council_meeting.field_start_date
     - field.field.node.council_meeting.field_start_time
     - node.type.council_meeting
@@ -14,6 +18,11 @@ targetEntityType: node
 bundle: council_meeting
 mode: teaser
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   links:
     weight: 100
     settings: {  }
