--- a/web/sites/default/config/core.entity_view_display.node.event.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.featured.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.event.field_legacy_path
     - field.field.node.event.field_related_content
     - field.field.node.event.field_reviewer
+    - field.field.node.event.field_search_keywords
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
     - field.field.node.event.field_summary
@@ -372,4 +373,5 @@ hidden:
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   links: true
