--- a/web/sites/default/config/core.entity_view_display.node.page.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.teaser.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
     - field.field.node.page.field_reviewer
+    - field.field.node.page.field_search_keywords
     - field.field.node.page.field_summary
     - field.field.node.page.field_topics
     - node.type.page
