--- a/web/sites/default/config/workflows.workflow.media.yml
+++ b/web/sites/default/config/workflows.workflow.media.yml
@@ -56,4 +56,4 @@ type_settings:
       - document
       - image
       - video
-  default_moderation_state: published
+  default_moderation_state: draft
