--- a/web/sites/default/config/core.entity_form_display.media.video.media_browser.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.media_browser.yml
@@ -4,10 +4,17 @@ status: true
 dependencies:
   config:
     - core.entity_form_mode.media.media_browser
+    - field.field.media.video.field_caption
+    - field.field.media.video.field_creator
+    - field.field.media.video.field_group
+    - field.field.media.video.field_license
     - field.field.media.video.field_media_in_library
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_source
+    - field.field.media.video.field_title
     - field.field.media.video.field_transcript
     - media.type.video
+    - workflows.workflow.media
   module:
     - content_moderation
     - path
@@ -59,6 +66,12 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_caption: true
+  field_creator: true
+  field_group: true
+  field_license: true
   field_media_video_embed_field: true
+  field_source: true
+  field_title: true
   field_transcript: true
   uid: true
