--- a/web/sites/default/config/core.entity_form_display.media.video.media_library.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.media_library.yml
@@ -1,9 +1,9 @@
-uuid: 6e241fbb-ea5c-442f-978f-5167bbf2d425
+uuid: 779c349f-caf9-4006-b0b4-4839279d3398
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.thumbnail
+    - core.entity_form_mode.media.media_library
     - field.field.media.video.field_caption
     - field.field.media.video.field_creator
     - field.field.media.video.field_group
@@ -13,29 +13,18 @@ dependencies:
     - field.field.media.video.field_source
     - field.field.media.video.field_title
     - field.field.media.video.field_transcript
-    - image.style.medium
     - media.type.video
-  module:
-    - image
-_core:
-  default_config_hash: n4pfwmyfbKw7UgpIu3-0jgMdizFM7lDE38pJCB5hnSI
-id: media.video.thumbnail
+id: media.video.media_library
 targetEntityType: media
 bundle: video
-mode: thumbnail
+mode: media_library
 content:
-  content_moderation_control:
-    weight: -20
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-  thumbnail:
-    type: image
-    weight: 0
-    label: hidden
+  name:
+    type: string_textfield
     settings:
-      image_style: medium
-      image_link: ''
+      size: 60
+      placeholder: ''
+    weight: 0
     third_party_settings: {  }
     region: content
 hidden:
@@ -49,5 +38,8 @@ hidden:
   field_source: true
   field_title: true
   field_transcript: true
-  name: true
+  moderation_state: true
+  path: true
+  preview: true
+  status: true
   uid: true
