--- a/web/sites/default/config/core.entity_view_display.media.audio.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.embedded.yml
@@ -4,9 +4,14 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.embedded
+    - field.field.media.audio.field_caption
+    - field.field.media.audio.field_creator
     - field.field.media.audio.field_group
+    - field.field.media.audio.field_license
     - field.field.media.audio.field_media_in_library
     - field.field.media.audio.field_media_video_embed_field
+    - field.field.media.audio.field_source
+    - field.field.media.audio.field_title
     - field.field.media.audio.field_transcript
     - media.type.audio
   module:
