--- a/web/sites/default/config/core.entity_view_display.media.document.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.media_library.yml
@@ -5,7 +5,9 @@ dependencies:
   config:
     - core.entity_view_mode.media.media_library
     - field.field.media.document.field_document
+    - field.field.media.document.field_document_type
     - field.field.media.document.field_file_size
+    - field.field.media.document.field_group
     - field.field.media.document.field_media_in_library
     - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
@@ -41,7 +43,9 @@ hidden:
   content_moderation_control: true
   created: true
   field_document: true
+  field_document_type: true
   field_file_size: true
+  field_group: true
   field_media_in_library: true
   field_mime_type: true
   field_summary: true
