--- a/web/sites/default/config/core.entity_view_display.media.document.thumbnail.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.thumbnail.yml
@@ -5,7 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.media.thumbnail
     - field.field.media.document.field_document
+    - field.field.media.document.field_document_type
+    - field.field.media.document.field_file_size
+    - field.field.media.document.field_group
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - image.style.medium
     - media.type.document
@@ -35,7 +39,11 @@ content:
 hidden:
   created: true
   field_document: true
+  field_document_type: true
+  field_file_size: true
+  field_group: true
   field_media_in_library: true
+  field_mime_type: true
   field_summary: true
   name: true
   uid: true
