--- a/web/sites/default/config/core.entity_view_display.media.video.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.media_library.yml
@@ -4,9 +4,14 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.media_library
+    - field.field.media.video.field_caption
+    - field.field.media.video.field_creator
     - field.field.media.video.field_group
+    - field.field.media.video.field_license
     - field.field.media.video.field_media_in_library
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_source
+    - field.field.media.video.field_title
     - field.field.media.video.field_transcript
     - media.type.video
   module:
@@ -48,8 +53,13 @@ content:
 hidden:
   content_moderation_control: true
   created: true
+  field_caption: true
+  field_creator: true
   field_group: true
+  field_license: true
   field_media_in_library: true
+  field_source: true
+  field_title: true
   field_transcript: true
   thumbnail: true
   uid: true
