--- a/web/sites/default/config/core.entity_view_display.node.development_permit.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.related.yml
@@ -5,13 +5,20 @@ dependencies:
   config:
     - core.entity_view_mode.node.related
     - field.field.node.development_permit.field_body_content
+    - field.field.node.development_permit.field_community_actions
     - field.field.node.development_permit.field_group
     - field.field.node.development_permit.field_legacy_path
     - field.field.node.development_permit.field_online_application_link
+    - field.field.node.development_permit.field_permit_type
     - field.field.node.development_permit.field_phone
     - field.field.node.development_permit.field_phone_help
+    - field.field.node.development_permit.field_popular
+    - field.field.node.development_permit.field_related_content
+    - field.field.node.development_permit.field_reviewer
+    - field.field.node.development_permit.field_search_keywords
     - field.field.node.development_permit.field_service_location
     - field.field.node.development_permit.field_summary
+    - field.field.node.development_permit.field_topics
     - node.type.development_permit
   module:
     - ds
@@ -54,6 +61,11 @@ targetEntityType: node
 bundle: development_permit
 mode: related
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   field_summary:
     type: string
     weight: 1
@@ -74,6 +86,7 @@ hidden:
   field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_service_location: true
   field_topics: true
   links: true
