--- a/web/sites/default/config/core.entity_view_display.node.development_permit.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.teaser.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.development_permit.field_popular
     - field.field.node.development_permit.field_related_content
     - field.field.node.development_permit.field_reviewer
+    - field.field.node.development_permit.field_search_keywords
     - field.field.node.development_permit.field_service_location
     - field.field.node.development_permit.field_summary
     - field.field.node.development_permit.field_topics
@@ -99,6 +100,7 @@ hidden:
   field_phone_help: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_service_location: true
   field_topics: true
   links: true
