--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.community_actions.full.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.community_actions.full.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.full
     - field.field.taxonomy_term.community_actions.field_fontawesome_icon
+    - field.field.taxonomy_term.community_actions.field_show_on_homepage
     - taxonomy.vocabulary.community_actions
   module:
     - ds
@@ -68,3 +69,4 @@ content:
             fi-def-at: false
 hidden:
   field_fontawesome_icon: true
+  field_show_on_homepage: true
