--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.community_actions.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.community_actions.search_result.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.search_result
     - field.field.taxonomy_term.community_actions.field_fontawesome_icon
+    - field.field.taxonomy_term.community_actions.field_show_on_homepage
     - taxonomy.vocabulary.community_actions
   module:
     - panelizer
