--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.term_button.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.term_button.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.term_button
+    - field.field.taxonomy_term.topics.field_fontawesome_icon
+    - field.field.taxonomy_term.topics.field_show_on_homepage
     - taxonomy.vocabulary.topics
   module:
     - panelizer
@@ -20,3 +22,5 @@ mode: term_button
 content: {  }
 hidden:
   description: true
+  field_fontawesome_icon: true
+  field_show_on_homepage: true
