--- a/web/sites/default/config/core.entity_view_display.user.user.full.yml
+++ b/web/sites/default/config/core.entity_view_display.user.user.full.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.full
+    - field.field.user.user.user_picture
   module:
     - ds
     - panelizer
