POWR-1093 view mode configuration change and search form scss update

--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -21,23 +21,36 @@ searched_fields:
   term_name: term_name
 style: view_modes
 view_mode_configuration:
-  'entity:group_bureau_office': search_result
-  'entity:group_elected_official': search_result
-  'entity:group_group': search_result
-  'entity:group_program': search_result
-  'entity:group_project': search_result
-  'entity:node_charter_article': search_result
-  'entity:node_charter_chapter': search_result
-  'entity:node_charter_section': search_result
-  'entity:node_city_service': search_result
-  'entity:node_code_chapter': search_result
-  'entity:node_code_section': search_result
-  'entity:node_code_title': search_result
-  'entity:node_development_permit': search_result
-  'entity:node_event': search_result
-  'entity:node_news': search_result
-  'entity:node_page': search_result
-  'entity:taxonomy_term_audience': search_result
-  'entity:taxonomy_term_community_actions': search_result
-  'entity:taxonomy_term_topics': search_result
+  'entity:group':
+    default: search_result
+    overrides:
+      bureau_office: ''
+      elected_official: ''
+      group: ''
+      program: ''
+      project: ''
+  'entity:node':
+    default: search_result
+    overrides:
+      charter_article: ''
+      charter_chapter: ''
+      charter_section: ''
+      city_service: ''
+      code_chapter: ''
+      code_section: ''
+      code_title: ''
+      council_document: ''
+      council_meeting: ''
+      development_permit: ''
+      event: ''
+      news: ''
+      page: ''
+      policy: ''
+  'entity:taxonomy_term':
+    default: search_result
+    overrides:
+      audience: ''
+      community_actions: ''
+      topics: ''
 show_search_form: false
+parse_mode: direct
