--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -3479,7 +3479,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: Name
+            label: Author
             description: 'Start typing to see a list of matching names'
             use_operator: false
             operator: uid_op
@@ -3492,6 +3492,8 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -4239,7 +4241,7 @@ display:
           exposed: true
           expose:
             operator_id: name_op
-            label: 'Video name contains'
+            label: 'Video/Audio name contains'
             description: ''
             use_operator: false
             operator: name_op
@@ -4251,6 +4253,9 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -4357,7 +4362,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: Name
+            label: Author
             description: '<blank>'
             use_operator: false
             operator: uid_op
@@ -4370,6 +4375,8 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -7283,7 +7290,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: Name
+            label: Author
             description: 'Start typing to see a list of matching names'
             use_operator: false
             operator: uid_op
@@ -7296,6 +7303,8 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
             reduce: false
           is_grouped: false
           group_info:
