POWR-1093 remove moderation sort since patch was removed

--- a/web/sites/default/config/views.view.admin_charter_code_policies.yml
+++ b/web/sites/default/config/views.view.admin_charter_code_policies.yml
@@ -127,7 +127,7 @@ display:
               empty_column: false
               responsive: ''
             moderation_state:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
@@ -477,7 +477,7 @@ display:
           delta_first_last: false
           multi_type: separator
           separator: ', '
-          field_api_classes: false
+          field_api_classes: 0
           entity_type: node
           plugin_id: moderation_state_field
         changed:
