--- a/web/sites/default/config/views.view.admin_council_meetings.yml
+++ b/web/sites/default/config/views.view.admin_council_meetings.yml
@@ -95,6 +95,8 @@ display:
             title: title
             field_start_date: field_start_date
             field_start_time: field_start_time
+            field_council_meeting_type: field_council_meeting_type
+            field_council_meeting_status: field_council_meeting_status
             changed: changed
             status: status
             moderation_state: moderation_state
@@ -121,6 +123,20 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
+            field_council_meeting_type:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_council_meeting_status:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             changed:
               sortable: true
               default_sort_order: asc
@@ -136,7 +152,7 @@ display:
               empty_column: false
               responsive: ''
             moderation_state:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
