--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -84,13 +84,17 @@ display:
           description: ''
           columns:
             node_bulk_form: node_bulk_form
+            status: status
             title: title
             type: type
-            status: status
+            field_reviewer: field_reviewer
+            break: break
+            timestamp: timestamp
+            nid: nid
+            is_locked: is_locked
             moderation_state_1: moderation_state_1
             revision_uid: revision_uid
             changed: changed
-            field_reviewer: field_reviewer
             operations: operations
           info:
             node_bulk_form:
@@ -98,6 +102,13 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
+            status:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: priority-medium
             title:
               sortable: true
               default_sort_order: asc
@@ -112,15 +123,43 @@ display:
               separator: ''
               empty_column: false
               responsive: priority-medium
-            status:
+            field_reviewer:
               sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: priority-medium
+            break:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            timestamp:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            nid:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            is_locked:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             moderation_state_1:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
@@ -140,13 +179,6 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            field_reviewer:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: priority-medium
             operations:
               align: ''
               separator: ''
