--- a/web/sites/default/config/views.view.admin_group_content_bulk_operations.yml
+++ b/web/sites/default/config/views.view.admin_group_content_bulk_operations.yml
@@ -70,6 +70,7 @@ display:
             title: title
             field_page_type: field_page_type
             type: type
+            is_locked: is_locked
             field_group: field_group
             gid: gid
             name: name
@@ -104,6 +105,13 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
+            is_locked:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             field_group:
               sortable: true
               default_sort_order: asc
@@ -133,7 +141,7 @@ display:
               empty_column: false
               responsive: priority-low
             moderation_state:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
