--- a/web/sites/default/config/views.view.content.yml
+++ b/web/sites/default/config/views.view.content.yml
@@ -65,10 +65,13 @@ display:
           columns:
             node_bulk_form: node_bulk_form
             title: title
+            field_page_type: field_page_type
             type: type
+            gid: gid
             name: name
             changed: changed
             moderation_state: moderation_state
+            field_legacy_path: field_legacy_path
             operations: operations
           info:
             node_bulk_form:
@@ -83,8 +86,22 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
+            field_page_type:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             type:
               sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            gid:
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
@@ -105,8 +122,13 @@ display:
               empty_column: false
               responsive: priority-low
             moderation_state:
-              sortable: true
+              sortable: false
               default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_legacy_path:
               align: ''
               separator: ''
               empty_column: false
