--- a/web/sites/default/config/views.view.my_content.yml
+++ b/web/sites/default/config/views.view.my_content.yml
@@ -92,11 +92,10 @@ display:
             status: status
             moderation_state: moderation_state
             label: label
-            changed: changed
             revision_uid: revision_uid
+            changed: changed
             field_reviewer: field_reviewer
             operations: operations
-            nid: nid
           info:
             title:
               sortable: true
@@ -120,7 +119,7 @@ display:
               empty_column: false
               responsive: ''
             moderation_state:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
@@ -133,14 +132,14 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            changed:
+            revision_uid:
               sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            revision_uid:
+            changed:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -155,13 +154,6 @@ display:
               empty_column: false
               responsive: ''
             operations:
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            nid:
-              sortable: true
-              default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
