--- a/web/sites/default/config/views.view.admin_content_services.yml
+++ b/web/sites/default/config/views.view.admin_content_services.yml
@@ -124,7 +124,7 @@ display:
               empty_column: false
               responsive: priority-low
             moderation_state:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
