--- a/web/sites/default/config/views.view.admin_council_documents.yml
+++ b/web/sites/default/config/views.view.admin_council_documents.yml
@@ -94,10 +94,10 @@ display:
             title: title
             field_council_document_status: field_council_document_status
             field_council_document_type: field_council_document_type
+            changed: changed
             status: status
             moderation_state: moderation_state
             operations: operations
-            changed: changed
           info:
             title:
               sortable: true
@@ -120,6 +120,13 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
+            changed:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             status:
               sortable: true
               default_sort_order: asc
@@ -128,20 +135,13 @@ display:
               empty_column: false
               responsive: ''
             moderation_state:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
             operations:
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            changed:
-              sortable: true
-              default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
