--- a/web/sites/default/config/views.view.moderated_content.yml
+++ b/web/sites/default/config/views.view.moderated_content.yml
@@ -89,13 +89,13 @@ display:
             title: title
             label: label
             type: type
-            moderation_state: moderation_state
             status: status
-            changed: changed
+            moderation_state: moderation_state
             name: name
+            changed: changed
             name_1: name_1
             revision_log: revision_log
-            edit_node: edit_node
+            operations: operations
           info:
             title:
               sortable: true
@@ -118,14 +118,21 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            moderation_state:
+            status:
               sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            status:
+            moderation_state:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            name:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -135,13 +142,6 @@ display:
             changed:
               sortable: true
               default_sort_order: desc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            name:
-              sortable: true
-              default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
@@ -160,9 +160,7 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            edit_node:
-              sortable: false
-              default_sort_order: asc
+            operations:
               align: ''
               separator: ''
               empty_column: false
@@ -1885,6 +1883,7 @@ display:
       tags:
         - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
+        - extensions
   page_1:
     display_plugin: page
     id: page_1
