--- a/composer.json
+++ b/composer.json
@@ -158,6 +158,7 @@
         "patches": {
             "drupal/core": {
                 "2567035 - Database::startLog() cause a notice in Shortcut::sort()": "https://www.drupal.org/files/issues/2567035-surpress-uasort-contents-modified-errors-20.patch",
+                "2797583 - Dynamically provide action plugins for every moderation state change": "https://www.drupal.org/files/issues/publish_unpublish-2797583-62.patch",
                 "1349080 - node_access filters out accessible nodes when node is left joined.": "https://www.drupal.org/files/issues/2018-09-10/1349080-411.patch",
                 "2885278 - Node local tasks tabs do not appear on node revisions": "https://www.drupal.org/files/issues/2018-04-19/node-revisions-missing-local-tasks-2885278-11.patch",
                 "2769289 - Revision User information not displayed in views when content revision user is selected for View type Content": "https://www.drupal.org/files/issues/2018-09-07/node_revision_author-2769289-11.patch",
