POWR-1072 small custom module to clear reviewer field when node is published

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -130,6 +130,7 @@ module:
   portland_legacy_redirects: 0
   portland_media_embed_helper: 0
   portland_migrations: 0
+  portland_moderation_helper: 0
   portland_revision_helper: 0
   portland_views_helper: 0
   quickedit: 0
