POWR-1093 update lightning, drop core dependency, update patches, and boom

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     },
     "require": {
-        "acquia/lightning": "^3.2",
+        "acquia/lightning": "^4.0",
         "bower-asset/bootstrap-datepicker": "^1.8",
         "bower-asset/cropper": "^2.3",
         "composer/installers": "^1.2",
@@ -48,7 +48,6 @@
         "drupal/console": "^1.0.2",
         "drupal/content_lock": "^1.0@alpha",
         "drupal/copyright_block": "^1.0@RC",
-        "drupal/core": "8.6.17",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/custom_view_filters": "^1.0@beta",
         "drupal/draggableviews": "^1.2",
@@ -67,6 +66,7 @@
         "drupal/groupmedia": "^2.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "^1.8",
+        "drupal/lightning_layout": "~2.0.0",
         "drupal/link_class": "^1.3",
         "drupal/linkit": "^4.3",
         "drupal/maxlength": "^1.0",
@@ -158,11 +158,11 @@
         "patches": {
             "drupal/core": {
                 "2567035 - Database::startLog() cause a notice in Shortcut::sort()": "https://www.drupal.org/files/issues/2567035-surpress-uasort-contents-modified-errors-20.patch",
-                "2797583 - Dynamically provide action plugins for every moderation state change": "https://www.drupal.org/files/issues/publish_unpublish-2797583-62.patch",
+                "2797583 - Dynamically provide action plugins for every moderation state change": "https://www.drupal.org/files/issues/2019-04-28/2797583-102_8_7_x.patch",
                 "1349080 - node_access filters out accessible nodes when node is left joined.": "https://www.drupal.org/files/issues/2018-09-10/1349080-411.patch",
                 "2885278 - Node local tasks tabs do not appear on node revisions": "https://www.drupal.org/files/issues/2018-04-19/node-revisions-missing-local-tasks-2885278-11.patch",
                 "2769289 - Revision User information not displayed in views when content revision user is selected for View type Content": "https://www.drupal.org/files/issues/2018-09-07/node_revision_author-2769289-11.patch",
-                "2174633 - View output is not used for entityreference options": "https://www.drupal.org/files/issues/2018-12-12/2174633-227.patch"
+                "2174633 - View output is not used for entityreference options": "https://www.drupal.org/files/issues/2019-06-21/2174633-309.patch"
             },
             "drupal/bootstrap_datepicker": {
                 "POWR-904/854/1017 - Submodule for exposed filter with custom identifier": "patches/powr-904-bootstrap-datepicker.patch"
