--- a/web/sites/default/config/core.entity_form_display.media.document.media_library.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.media_library.yml
@@ -1,9 +1,9 @@
-uuid: d68420be-5c8e-4ad8-b10c-e67a7f3f1083
+uuid: 7dcd4b1b-2bf9-4b24-a57b-0e8b18befb98
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.embedded
+    - core.entity_form_mode.media.media_library
     - field.field.media.document.field_document
     - field.field.media.document.field_document_type
     - field.field.media.document.field_file_size
@@ -12,23 +12,20 @@ dependencies:
     - field.field.media.document.field_mime_type
     - field.field.media.document.field_summary
     - media.type.document
-_core:
-  default_config_hash: qwXr3yVUHU3LwMQ1n9mTyDj2s7sUqpNtasS-nSu86rE
-id: media.document.embedded
+id: media.document.media_library
 targetEntityType: media
 bundle: document
-mode: embedded
+mode: media_library
 content:
   name:
-    type: string
-    weight: 0
-    region: content
-    label: hidden
+    type: string_textfield
     settings:
-      link_to_entity: true
+      size: 60
+      placeholder: ''
+    weight: 0
     third_party_settings: {  }
+    region: content
 hidden:
-  content_moderation_control: true
   created: true
   field_document: true
   field_document_type: true
@@ -37,5 +34,7 @@ hidden:
   field_media_in_library: true
   field_mime_type: true
   field_summary: true
-  thumbnail: true
+  moderation_state: true
+  path: true
+  status: true
   uid: true
