--- a/web/sites/default/config/core.entity_form_display.media.image.media_library.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.media_library.yml
@@ -1,9 +1,9 @@
-uuid: 9b161571-3e35-4189-8230-d1c20c7987e0
+uuid: 0feda86c-0cbd-43c0-9171-110360d10195
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.banner
+    - core.entity_form_mode.media.media_library
     - field.field.media.image.field_caption
     - field.field.media.image.field_creator
     - field.field.media.image.field_file_size
@@ -16,36 +16,32 @@ dependencies:
     - field.field.media.image.field_source
     - field.field.media.image.field_title
     - field.field.media.image.image
+    - image.style.thumbnail
     - media.type.image
-    - responsive_image.styles.banner
   module:
-    - ds
-    - responsive_image
-_core:
-  default_config_hash: VLDxfMVPTkd2xvOjFMCh3kWmaOYnd03zggFXuUXQVEY
-id: media.image.banner
+    - image
+id: media.image.media_library
 targetEntityType: media
 bundle: image
-mode: banner
+mode: media_library
 content:
   image:
-    type: responsive_image
-    weight: 0
-    label: hidden
+    weight: 5
     settings:
-      responsive_image_style: banner
-      image_link: ''
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: image_image
+    region: content
+  name:
+    type: string_textfield
+    settings:
+      size: 60
+      placeholder: ''
+    weight: 0
+    third_party_settings: {  }
     region: content
 hidden:
-  content_moderation_control: true
   created: true
   field_caption: true
   field_creator: true
@@ -58,6 +54,7 @@ hidden:
   field_mime_type: true
   field_source: true
   field_title: true
-  name: true
-  thumbnail: true
+  moderation_state: true
+  path: true
+  status: true
   uid: true
