--- a/web/sites/default/config/core.entity_view_display.group.program.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.search_result.yml
@@ -8,10 +8,22 @@ dependencies:
     - field.field.group.program.field_audience
     - field.field.group.program.field_building
     - field.field.group.program.field_email
+    - field.field.group.program.field_enable_documents_menu_item
+    - field.field.group.program.field_enable_events_menu_item
+    - field.field.group.program.field_enable_guides_and_informat
+    - field.field.group.program.field_enable_news_and_notices_me
+    - field.field.group.program.field_enable_programs_menu_item
+    - field.field.group.program.field_enable_projects_menu_item
+    - field.field.group.program.field_enable_services_and_inform
+    - field.field.group.program.field_featured_content
+    - field.field.group.program.field_featured_groups
+    - field.field.group.program.field_featured_media
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
+    - field.field.group.program.field_menu_link
     - field.field.group.program.field_parent_group
     - field.field.group.program.field_phone
+    - field.field.group.program.field_search_keywords
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
@@ -59,6 +71,11 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
+  group_site_menu_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   label:
     label: hidden
     type: string
@@ -102,10 +119,22 @@ hidden:
   field_audience: true
   field_building: true
   field_email: true
+  field_enable_documents_menu_item: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_programs_menu_item: true
+  field_enable_projects_menu_item: true
+  field_enable_services_and_inform: true
+  field_featured_content: true
+  field_featured_groups: true
+  field_featured_media: true
   field_legacy_path: true
   field_logo: true
+  field_menu_link: true
   field_parent_group: true
   field_phone: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   uid: true
