--- a/web/sites/default/config/core.entity_view_display.user.user.default.yml
+++ b/web/sites/default/config/core.entity_view_display.user.user.default.yml
@@ -2,6 +2,8 @@ uuid: 2cd73a44-37e7-44eb-88c4-3fea6dcc121a
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.field.user.user.user_picture
   module:
     - ds
     - panelizer
@@ -100,4 +102,21 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+  user_assigned_to_review_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
+  user_assigned_to_review_entity_view_2:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
+  user_member_of_groups_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
+hidden:
+  name: true
+  user_picture: true
