POWR-1145 Adjust image sizes and update card style to force horizontal card image width

--- a/web/sites/default/config/responsive_image.styles.featured_large.yml
+++ b/web/sites/default/config/responsive_image.styles.featured_large.yml
@@ -3,28 +3,28 @@ langcode: en
 status: true
 dependencies:
   config:
-    - image.style.featured_1_1_500w
-    - image.style.featured_3_2_670w
-    - image.style.featured_3_2_996w
+    - image.style.featured_2_1_600w
+    - image.style.featured_2_1_700w
+    - image.style.featured_3_2_480w
   theme:
     - cloudy
 id: featured_large
 label: 'Featured large'
 image_style_mappings:
   -
-    breakpoint_id: cloudy.media-breakpoint-up-xl
-    multiplier: 1x
-    image_mapping_type: image_style
-    image_mapping: featured_3_2_670w
-  -
     breakpoint_id: cloudy.media-breakpoint-up-lg
     multiplier: 1x
     image_mapping_type: image_style
-    image_mapping: featured_1_1_500w
+    image_mapping: featured_3_2_480w
+  -
+    breakpoint_id: cloudy.media-breakpoint-up-md
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: featured_2_1_700w
   -
     breakpoint_id: cloudy.media-breakpoint-up-sm
     multiplier: 1x
     image_mapping_type: image_style
-    image_mapping: featured_3_2_996w
+    image_mapping: featured_2_1_600w
 breakpoint_group: cloudy
-fallback_image_style: featured_3_2_996w
+fallback_image_style: featured_2_1_600w
