--- a/web/sites/default/config/core.entity_view_display.group.elected_official.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.search_result.yml
@@ -25,6 +25,61 @@ dependencies:
     - group.type.elected_official
   module:
     - ds
+third_party_settings:
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      second:
+        - 'bundle_field:group'
+        - label
+        - field_summary
+    fields:
+      'bundle_field:group':
+        plugin_id: 'bundle_field:group'
+        weight: 0
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 id: group.elected_official.search_result
 targetEntityType: group
 bundle: elected_official
@@ -65,17 +120,12 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: string
-    region: content
-  group_site_menu_entity_view_1:
-    weight: 10
-    settings: {  }
-    third_party_settings: {  }
-    region: content
+    region: second
   label:
     label: hidden
     type: string
     weight: 1
-    region: content
+    region: second
     settings:
       link_to_entity: true
     third_party_settings:
@@ -127,4 +177,5 @@ hidden:
   field_phone: true
   field_search_keywords: true
   field_shortname_or_acronym: true
+  group_site_menu_entity_view_1: true
   uid: true
