--- a/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
@@ -23,19 +23,78 @@ dependencies:
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
+  module:
+    - ds
+third_party_settings:
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      second:
+        - label
+        - field_summary
 id: group.elected_official.teaser
 targetEntityType: group
 bundle: elected_official
 mode: teaser
 content:
-  field_official_title:
+  field_summary:
     type: string
     weight: 0
-    region: content
-    label: visually_hidden
+    region: second
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
+  label:
+    type: string
+    weight: 0
+    region: second
+    label: hidden
+    settings:
+      link_to_entity: true
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: h2
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 hidden:
   changed: true
   created: true
@@ -52,10 +111,9 @@ hidden:
   field_featured_groups: true
   field_legacy_path: true
   field_menu_link: true
+  field_official_title: true
   field_phone: true
   field_search_keywords: true
   field_shortname_or_acronym: true
-  field_summary: true
   group_site_menu_entity_view_1: true
-  label: true
   uid: true
