POWR-1145 Add card to bureau/office

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
@@ -30,27 +30,78 @@ dependencies:
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
+  module:
+    - ds
+third_party_settings:
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      second:
+        - label
+        - field_summary
 id: group.bureau_office.teaser
 targetEntityType: group
 bundle: bureau_office
 mode: teaser
 content:
-  field_official_organization_name:
-    type: string
-    weight: 0
-    region: content
-    label: visually_hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   field_summary:
     type: string
     weight: 1
-    region: content
+    region: second
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
+  label:
+    type: string
+    weight: 0
+    region: second
+    label: hidden
+    settings:
+      link_to_entity: true
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: h2
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 hidden:
   changed: true
   created: true
@@ -72,11 +123,11 @@ hidden:
   field_legacy_path: true
   field_logo: true
   field_menu_link: true
+  field_official_organization_name: true
   field_parent_group: true
   field_phone: true
   field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   group_site_menu_entity_view_1: true
-  label: true
   uid: true
