--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.search_result.yml
@@ -32,6 +32,61 @@ dependencies:
     - group.type.bureau_office
   module:
     - ds
+third_party_settings:
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      second:
+        - 'bundle_field:group'
+        - label
+        - field_summary
+    fields:
+      'bundle_field:group':
+        plugin_id: 'bundle_field:group'
+        weight: 0
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 id: group.bureau_office.search_result
 targetEntityType: group
 bundle: bureau_office
@@ -39,8 +94,8 @@ mode: search_result
 content:
   field_summary:
     type: string
-    weight: 1
-    region: content
+    weight: 2
+    region: second
     label: hidden
     settings:
       link_to_entity: false
@@ -73,16 +128,11 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
-  group_site_menu_entity_view_1:
-    weight: 10
-    settings: {  }
-    third_party_settings: {  }
-    region: content
   label:
     label: hidden
     type: string
-    weight: 0
-    region: content
+    weight: 1
+    region: second
     settings:
       link_to_entity: true
     third_party_settings:
