POWR-1145 Add card to program and community actions search result

--- a/web/sites/default/config/core.entity_view_display.group.program.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.search_result.yml
@@ -30,6 +30,61 @@ dependencies:
     - group.type.program
   module:
     - ds
+third_party_settings:
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      second:
+        - 'bundle_field:group'
+        - label
+        - field_summary
+    fields:
+      'bundle_field:group':
+        plugin_id: 'bundle_field:group'
+        weight: 0
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: fiv
+            fi-cl: 'badge badge-pill badge-light'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 id: group.program.search_result
 targetEntityType: group
 bundle: program
@@ -38,7 +93,7 @@ content:
   field_summary:
     type: string
     weight: 2
-    region: content
+    region: second
     label: hidden
     settings:
       link_to_entity: false
@@ -80,7 +135,7 @@ content:
     label: hidden
     type: string
     weight: 1
-    region: content
+    region: second
     settings:
       link_to_entity: true
     third_party_settings:
@@ -137,4 +192,5 @@ hidden:
   field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
+  group_site_menu_entity_view_1: true
   uid: true
