--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.community_actions.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.community_actions.search_result.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.taxonomy_term.community_actions.field_show_on_homepage
     - taxonomy.vocabulary.community_actions
   module:
+    - ds
     - panelizer
     - text
 third_party_settings:
@@ -16,6 +17,75 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      second:
+        - 'bundle_field:taxonomy_term'
+        - taxonomy_term_title
+        - description
+    fields:
+      'bundle_field:taxonomy_term':
+        plugin_id: 'bundle_field:taxonomy_term'
+        weight: 0
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+      taxonomy_term_title:
+        plugin_id: taxonomy_term_title
+        weight: 1
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: taxonomy_term.community_actions.search_result
 targetEntityType: taxonomy_term
 bundle: community_actions
@@ -25,7 +95,7 @@ content:
     label: hidden
     type: text_default
     weight: 2
-    region: content
+    region: second
     settings: {  }
     third_party_settings: {  }
 hidden:
