POWR-1137 consolidate views and scss. Use block view instead of EVA—triggering a lot of change

--- a/web/sites/default/config/views.view.my_content.yml
+++ b/web/sites/default/config/views.view.my_content.yml
@@ -170,7 +170,7 @@ display:
               empty_column: false
               responsive: ''
             moderation_state_1:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
