--- a/web/sites/default/config/views.view.user_assigned_to_review.yml
+++ b/web/sites/default/config/views.view.user_assigned_to_review.yml
@@ -6,7 +6,6 @@ dependencies:
     - workflows.workflow.editorial
   module:
     - content_moderation
-    - eva
     - node
     - user
 id: user_assigned_to_review
@@ -636,7 +635,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: '<h2>@total items assigned for review</h2>'
+          content: '<p>@total items assigned</p>'
           plugin_id: result
       footer: {  }
       empty: {  }
@@ -705,6 +704,7 @@ display:
         operator: AND
         groups:
           1: AND
+      title: 'Assigned for review'
     cache_metadata:
       max-age: -1
       contexts:
@@ -715,136 +715,14 @@ display:
         - user.permissions
       tags:
         - 'config:workflow_list'
-  entity_view_1:
-    display_plugin: entity_view
-    id: entity_view_1
-    display_title: 'In review EVA'
-    position: 1
+  block_1:
+    display_plugin: block
+    id: block_1
+    display_title: Block
+    position: 3
     display_options:
       display_extenders: {  }
-      entity_type: user
-      bundles:
-        - user
-      display_description: ''
-      defaults:
-        fields: true
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - url
-        - 'user.node_grants:view'
-        - user.permissions
-      tags:
-        - 'config:workflow_list'
-  entity_view_2:
-    display_plugin: entity_view
-    id: entity_view_2
-    display_title: 'Other items EVA'
-    position: 1
-    display_options:
-      display_extenders: {  }
-      entity_type: user
-      bundles:
-        - user
-      filters:
-        latest_revision:
-          id: latest_revision
-          table: node_revision
-          field: latest_revision
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: ''
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          plugin_id: latest_revision
-        moderation_state:
-          id: moderation_state
-          table: node_field_revision
-          field: moderation_state
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: 'not in'
-          value:
-            editorial-review: editorial-review
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          plugin_id: moderation_state_filter
-      defaults:
-        filters: false
-        filter_groups: false
-        header: false
-      filter_groups:
-        operator: AND
-        groups:
-          1: AND
-      display_description: ''
-      header:
-        result:
-          id: result
-          table: views
-          field: result
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          content: '<h2>@total additional items assigned</h2>'
-          plugin_id: result
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
