POWR-1148 Update banner image aspect ratio

--- a/web/sites/default/config/image.style.banner_2_1_640w.yml
+++ b/web/sites/default/config/image.style.banner_2_1_640w.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   module:
     - focal_point
-name: banner_max_640w
-label: 'Banner 640x200'
+name: banner_2_1_640w
+label: 'Banner 2:1 640w'
 effects:
   3a9f9a96-d952-44e5-a2c2-19acaa0e41df:
     uuid: 3a9f9a96-d952-44e5-a2c2-19acaa0e41df
@@ -13,5 +13,5 @@ effects:
     weight: 1
     data:
       width: 640
-      height: 200
+      height: 320
       crop_type: focal_point
