--- a/web/sites/default/config/responsive_image.styles.banner.yml
+++ b/web/sites/default/config/responsive_image.styles.banner.yml
@@ -3,12 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
-    - image.style.banner_max_1024w
-    - image.style.banner_max_1366w
-    - image.style.banner_max_1600w
-    - image.style.banner_max_1920w
-    - image.style.banner_max_640w
-    - image.style.banner_max_768w
+    - image.style.banner_21_9_1140w
+    - image.style.banner_21_9_960w
+    - image.style.banner_2_1_640w
+    - image.style.banner_2_1_892w
   theme:
     - cloudy
 id: banner
@@ -17,35 +15,22 @@ image_style_mappings:
   -
     breakpoint_id: cloudy.media-breakpoint-up-xl
     multiplier: 1x
-    image_mapping_type: sizes
-    image_mapping:
-      sizes: '(min-width: 1200px) 1140px, 100vw'
-      sizes_image_styles:
-        - banner_max_1024w
-        - banner_max_1366w
-        - banner_max_1600w
-        - banner_max_1920w
+    image_mapping_type: image_style
+    image_mapping: banner_21_9_1140w
   -
     breakpoint_id: cloudy.media-breakpoint-up-lg
     multiplier: 1x
-    image_mapping_type: sizes
-    image_mapping:
-      sizes: 100vw
-      sizes_image_styles:
-        - banner_max_1024w
-        - banner_max_1366w
-        - banner_max_1600w
-        - banner_max_1920w
+    image_mapping_type: image_style
+    image_mapping: banner_21_9_960w
+  -
+    breakpoint_id: cloudy.media-breakpoint-up-md
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: banner_2_1_892w
   -
     breakpoint_id: cloudy.media-breakpoint-up-sm
     multiplier: 1x
-    image_mapping_type: sizes
-    image_mapping:
-      sizes: 100vw
-      sizes_image_styles:
-        - banner_max_1024w
-        - banner_max_1366w
-        - banner_max_1600w
-        - banner_max_768w
+    image_mapping_type: image_style
+    image_mapping: banner_2_1_640w
 breakpoint_group: cloudy
-fallback_image_style: banner_max_640w
+fallback_image_style: banner_2_1_640w
